tests/lowering/module-headers-unsupported.stderr
error: module headers not supported yet
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:6:1
  |
6 | module
  | ^^^^^^ 
  |

error[E013]: attribute `foreign` cannot be ascribed to a module header declaraiton
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:8:1
  |
8 | @foreign
  | ^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:9:1
  |
9 | module
  | ------ incompatible item
  |
 note: attribute `foreign` can only be ascribed to value or data declarations

error: module headers not supported yet
 --> ${DIRECTORY}/lowering/module-headers-unsupported.lushui:9:1
  |
9 | module
  | ^^^^^^ 
  |

error: aborting due to 3 previous errors

