tests/lowering/module-headers-unsupported.lushui
;; XXX @Task update syntax
;; TEST fail check

; module-level
; documentation
; here
module

@foreign
module
